# muse

./: .gitignore  README.md  pyproject.toml
backend/muse/: __init__.py  alerts.py  annotations.py  artifacts.py  board.py  changes.py  claude_stats.py  cli.py  config.py  db.py  discovery.py  eventlog.py  file_index.py  gitindex.py  incremental.py  investigations.py  lifecycle.py  lineage.py  main.py  models.py  notify.py  packs.py  parser.py  paths.py  patterns.py  persisted.py  plan.py  pricing.py  search.py  stats.py  tailer.py  transcript.py  usage_cache.py  usage_history.py  usage_insights.py  worklog.py
backend/muse/ai/: __init__.py  context.py  digest.py  jobs.py  prompts.py  runner.py
backend/muse/autopilot/: __init__.py  (+5 more)
backend/tests/: test_ai_context.py  test_ai_digest.py  test_ai_jobs.py  test_ai_runner.py  test_alerts.py  test_artifacts.py  test_board.py  test_changes.py  test_codex_adapter.py  test_db.py  test_eventlog.py  test_file_index.py  test_gemini_adapter.py  test_gitindex.py  test_interact.py  test_investigations.py  test_lifecycle.py  test_lineage.py  test_mcp_tools.py  test_notify.py  test_opencode_adapter.py  test_packs.py  test_parser.py  test_patterns.py  test_reentry_brief.py  test_ref_validation.py  test_search.py  test_service_cache.py  test_session_nav.py  test_session_tokens.py  test_usage_dedupe.py  test_usage_history.py  test_worklog.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  hljs-github-dark.css  main.tsx  styles.css
scripts/: dev.sh  restart.sh
(+106 files in other folders)
