[project]
name = "muse"
version = "0.1.0"
description = "Web app to investigate Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "watchfiles>=0.22",
    "sse-starlette>=2.1",
    "anyio>=4.4",
    "orjson>=3.10",
    "mcp>=1.27.2",
]

[project.scripts]
muse = "muse.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/muse"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
src = ["backend"]
